# ByteSlice

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
example/: CMakeLists.txt  example1.cpp  hybrid_timer.h
src/: CMakeLists.txt  avx-utility.h  bitvector.cpp  bitvector.h  bitvector_block.cpp  bitvector_block.h  bitvector_iterator.cpp  bitvector_iterator.h  byteslice_column_block.cpp  byteslice_column_block.h  column.cpp  column.h  column_block.h  macros.h  naive_column_block.cpp  naive_column_block.h  param.h  sequential_binary_file.cpp  sequential_binary_file.h  types.cpp  types.h
tests/: CMakeLists.txt  avx-utility_test.cpp  bitvector_block_test.cpp  bitvector_iterator_test.cpp  bitvector_test.cpp  byteslice_column_block_test.cpp  column_test.cpp
